# sekai

./: .gitignore  .ralphrc  CLAUDE.md  INITIAL_SPEC.md  README.md  pyproject.toml
.ralph/: .loop_start_sha  PROMPT.md  _probe.py  fix_plan.md  progress.json  queue.json
.ralph/specs/: issue-1.md  issue-2.md  issue-3.md  issue-4.md  issue-5.md
docs/agents/: domain.md  issue-tracker.md
src/sekai/: cli.py  container.py  contracts.py  curate.py  fetch.py  render.py  synthesize.py
tests/: conftest.py  test_curate.py  test_pipeline.py  test_render.py
