[project]
name = "sekai"
version = "0.1.0"
description = "Local CLI that synthesizes EN-language online discourse into a culturally-framed Japanese Markdown report."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "praw>=7.7,<8",
    "anthropic>=0.40,<1",
    "dependency-injector>=4.41,<5",
]

[project.scripts]
sekai = "sekai.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sekai"]

[tool.pytest.ini_options]
pythonpath = ["src"]
